--- a/public/chat/chat.html
+++ b/public/chat/chat.html
@@ -16,7 +16,7 @@
          <button class="btn btn-submit" id="submit">Send</button>
       </div>
       <script>
-         const socket = io.connect("http://ec2-34-202-157-224.compute-1.amazonaws.com");   //connect to the backend
+         const socket = io.connect("http://ec2-34-202-157-224.compute-1.amazonaws.com:3000");   //connect to the backend
          
          $('#submit').click(() => {
              const talk = $('#talk').val();             //get the values of form elements such as input and textarea 
